Fixed profile image not showing up

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,8 @@
   margin: 0;
   padding: 0;
   padding-top: 10vh;
+
+  z-index: 1;
 }
 
 .header {
@@ -36,7 +38,7 @@
   object-fit: contain;
   overflow: hidden;
 
-  z-index: -1;
+  z-index: 0;
 }
 
 .cursor {
