--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,10 +10,8 @@ body {
   margin: 0;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
-  background-color: #000000;
-  color: #ffffff;
 }
+
 
 a {
   color: inherit;
